Contact section was overlapping, fixed that

--- a/templates/stylesheet.css
+++ b/templates/stylesheet.css
@@ -58,6 +58,7 @@ body {
     border-bottom: 2px solid #dee7ec;
     font-size: 28px;
     padding-bottom: 15px;
+    padding-top: 100px;
     margin-bottom: 50px;
     
   }
